[package]
name = "casper-event-toolkit"
edition = "2021"
authors = ["Andrzej Broński <andrzej1_1@o2.pl>"]
version = "0.1.3"

[lib]

[[example]]
name = "cep78_demo"

[dependencies]
bincode = "1.3.3"
casper-client = { git = "https://github.com/casper-ecosystem/casper-client-rs", branch = "feat-track-node-2.0"}
casper-types = { git = "https://github.com/casper-network/casper-node", branch = "release-2.0.0-rc4" }
casper-event-standard = { git = "https://github.com/cspr-rad/casper-event-standard", branch = "bump-casper-types"}
hex = "0.4"
serde = { version = "1.0", features = ["serde_derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

# https://github.com/casper-ecosystem/casper-client-rs/blob/2227d5ada7a02f9406a7fb0cb290e55bea3e30e5/Cargo.toml#L56-L57
[patch.crates-io]
casper-types = { git = "https://github.com/casper-network/casper-node", branch = "release-2.0.0-rc4" }
